--- a/src/index.css
+++ b/src/index.css
@@ -175,3 +175,12 @@ code {
   height: 100%;
   margin-left: -100%;
 }
+
+.profile_overview {
+  flex-direction: column;
+}
+
+.profile_picture {
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
+}
