--- a/src/index.css
+++ b/src/index.css
@@ -72,8 +72,19 @@ code {
   border-radius: 10px;
   padding: 10px 25px;
   background: transparent;
-  max-width: 190px;
   margin-bottom: 10px;
+}
+
+.settings-btn {
+  width: 100%;
+  background-image: linear-gradient(45deg, #fe934c 0%, #fc686f  51%, #fe934c  100%);
+  margin: 0 auto;
+  padding: 15px 30px;
+}
+.settings-panel{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
 }
 
 .navbar {
