--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: auto;
+  --main_gradient: linear-gradient(45deg, #fe934c 0%, #fc686f  51%, #fe934c  100%);
 }
 
 code {
@@ -37,7 +38,7 @@ code {
 }
 
 .logout-btn {
-  background-image: linear-gradient(45deg, #fe934c 0%, #fc686f  51%, #fe934c  100%);
+  background-image: var(--main_gradient);
   margin-left: 10px;
   padding: 5px;
 }
@@ -52,7 +53,7 @@ code {
 
 .login-btn {
   width: 100%;
-  background-image: linear-gradient(45deg, #fe934c 0%, #fc686f  51%, #fe934c  100%);
+  background-image: var(--main_gradient);
   margin: 0 auto;
   padding: 15px 30px;
 }
@@ -76,7 +77,7 @@ code {
 
 .settings-btn {
   width: 100%;
-  background-image: linear-gradient(45deg, #fe934c 0%, #fc686f  51%, #fe934c  100%);
+  background-image: var(--main_gradient);
   margin: 0 auto;
   padding: 15px 30px;
 }
