Column amount of the general info ribbon depends on the screen width

--- a/src/index.css
+++ b/src/index.css
@@ -274,3 +274,9 @@ td:nth-child(4) {
   justify-content: center;
   align-items: center;
 }
+
+.grid-container {
+  grid-template-columns: repeat(6, 1fr);
+  display: grid;
+  gap: 50px;
+}
