--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,13 @@ code {
   margin-top: 50px;
 }
 
+.footer_transition {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
+}
+.footer_icon {
+  filter: brightness(0) invert();
+}
+
 .navbar {
   transition: 500ms;
   z-index: 102;
