--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.App {
+  text-align: center;
+}
+
 [id="root"] {
   overflow-x: hidden;
 }
@@ -30,276 +34,14 @@ code {
     monospace;
 }
 
-.login-panel{
-  height: 100vh;
-  display: inline-block;
-  margin: 50px;
-}
-
-.button {
-  text-align: center;
-  transition: 0.5s;
-  background-size: 200% auto;
-  color: white;
-  border-radius: 10px;
-  display: block;
-  border: 0;
-  font-weight: 700;
-  box-shadow: 0 0 14px -7px #f09819;
-}
-
-.logout-btn {
-  background-image: var(--main_gradient);
-  margin-left: 10px;
-  padding: 5px;
-}
-.logout-btn:hover {
-  background-position: right center;
-  color: #fff;
-  text-decoration: none;
-}
-.logout-btn:active {
-  transform: scale(0.95);
-}
-
-.login-btn {
-  width: 100%;
-  background-image: var(--main_gradient);
-  margin: 0 auto;
-  padding: 15px 30px;
-}
-.login-btn:hover {
-  background-position: right center;
-  color: #fff;
-  text-decoration: none;
-}
-.logout-btn:active {
-  transform: scale(0.95);
-}
-
-.text_field {
-  color: #F09819;
-  border: 2px solid #FF512F;
-  border-radius: 10px;
-  padding: 10px 25px;
-  background: transparent;
-  margin-bottom: 10px;
-}
-.text_field_color {
-  color: #F09819;
-}
-.text_field_border {
-  border: 2px solid #FF512F;
-  border-radius: 10px;
-}
-
-.settings-btn {
-  width: 100%;
-  background-image: var(--main_gradient);
-  margin: 0 auto;
-  padding: 15px 30px;
-}
-.settings-panel{
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-}
-
-.footer_transition {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
-}
-.footer_icon {
-  filter: brightness(0) invert();
-}
-
-.navbar {
-  transition: 500ms;
-  z-index: 102;
-  position: fixed;
-  display: flex;
-  height: var(--navbar-height);
-  width: 100vw;
-  background-image: linear-gradient(to top, rgba(0,0,0,0), rgba(0,0,0,1));
-}
-.navbar--hidden {
-  transform: translateY(calc(var(--navbar-height) * -1));
-}
-
-.navbar-title {
-  font-family: "Roboto", ui-rounded;
-  padding: 4px;
-  text-align: left;
-}
-
-.navbar-items {
-  position: relative;
-  flex: auto;
-}
-
-.navbar-btn {
-  color: #FFFFFF;
-  font-family: "Roboto", ui-rounded;
-  text-decoration: none;
-}
-
-.navbar_item {
-  flex: available;
-  padding-right: 10px;
-  align-self: center;
-  size: auto;
-  cursor: pointer;
-}
-.navbar_item:first-child {
-  margin-left: 5%;
-}
-.navbar_item:nth-last-child(1) {
-  margin-left: auto;
-  margin-right: 5%;
-}
-
-.logo {
-  color: #FFFFFF;
-  font-family: "Roboto", ui-rounded;
-  text-decoration: none;
-}
-
-.row_item img {
-  display: block;
-  overflow: hidden;
-}
-
-.browse_container {
-  overflow-x: hidden;
-  display: inline;
-  height: 100%;
-  background-color: #131313;
-}
-.browse_container img{
-  overflow-x: visible;
-}
-
-.movie_card_button {
-  font-family: "Times New Roman", sans-serif;
-  cursor: pointer;
-}
-.movie_card_button_no_cursor {
-  font-family: "Times New Roman", sans-serif;
-  cursor: default;
-}
-
-.row_item {
-  position: relative;
-  padding: 2px;
-  flex: 1 1 0;
-  transition: all 450ms;
-  left: 1px;
-  cursor: default;
-}
-
-.browse_container .row_item:focus,
-.browse_container .row_item:hover{
-  transform: scale(1.5);
-}
-
-[id^="itemInRowId1-"] {
-  transform-origin: left;
-}
-
-.arrow {
-  z-index: 101;
-  overflow: hidden;
-}
-
-.slider {
-  overflow: visible;
-  transition: all 450ms;
-}
-
-.carousel_row {
-  overflow-x: visible;
-  overflow-y: visible;
-}
-
-.player {
-  cursor: pointer;
-}
-
-.youtube-container {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-  aspect-ratio: 16/9;
-  pointer-events: none;
-}
-
-.youtube-container iframe {
-  width: 900%;
-  height: 100%;
-  margin-left: -400%;
-}
-
-.profile_overview {
-  flex-direction: column;
-}
-
-.flex_break {
-  flex-grow: 1;
-  flex-basis: 100%;
-}
-
-table {
-  width: 70%;
-}
-
-th, td {
-  border: 1px solid;
-}
-thead {
-  border-bottom-width: 1px;
-}
-
-td:first-child {
-  width: 10%;
-}
-td:nth-child(2) {
-  width: 50%;
-}
-td:nth-child(3) {
-  width: 15%;
-}
-td:nth-child(4) {
-  width: 5%;
-}
-
-.index_one {
-  z-index: 1;
-  position: absolute;
-}
 .center {
   position: center;
 }
+
 .flex_center {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.grid-container {
-  grid-template-columns: repeat(6, 1fr);
-  display: grid;
-  gap: 50px;
-}
-
-[id="movie_route_trailer"] {
-  transition: all 400ms;
-}
-
-.img_bg img{
-  filter: brightness(30%);
-  object-fit: cover;
 }
 
 .scroll_indicator {
