Cast & Crew Redesign

--- a/src/components/Movie Route/Movie.css
+++ b/src/components/Movie Route/Movie.css
@@ -26,7 +26,7 @@ td:nth-child(4) {
     transition: all 400ms;
 }
 
-.img_bg img{
+.img_bg{
     filter: brightness(30%);
     object-fit: cover;
 }
