--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,30 @@ code {
   filter: brightness(30%);
   object-fit: cover;
 }
+
+[id="collection_text"] {
+  grid-row-start: 1;
+  grid-column-start: 1;
+}
+[id="collection_items"] {
+  grid-column-start: 1;
+  grid-row-start: 1;
+}
+.media_parent {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.media_parent img {
+  grid-row-start: 1;
+  grid-column-start: 1;
+}
+
+[id="media_overview"] {
+  grid-row-start: 1;
+  grid-column-start: 1;
+}
+[id="media_cast"] {
+  grid-column-start: 1;
+  grid-row-start: 2;
+}
